7. Decor elements - Fix padding and align for all other elements.

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,12 @@ a {
 
 .footer-upper-row {
   background-color: var(--basic-grey);
+  padding-bottom: 54px;
+}
+
+.footer-contacts__paragraph {
+  margin: 0;
+  margin-top: 24px;
 }
 
 .background-white {
@@ -94,7 +100,7 @@ a {
   background-image: url("../img/shadow-line.svg");
   width: 10px;
   height: 279px;
-  right: 0;
+  right: 0px;
   top: -48px;
 }
 
@@ -166,6 +172,31 @@ a {
   margin: 0;
 }
 
+.description-header {
+  margin-bottom: 24px;
+}
+
+.pre-footer__first-paragraph {
+  margin-bottom: 35px;
+}
+
+.pre-footer__second-paragraph {
+  margin-bottom: 1px;
+}
+
+.service-header {
+  margin-top: 64px;
+  margin-bottom: 25px;
+}
+
+.delivery-header {
+  margin-top: 0;
+}
+
+.delivery-section {
+  margin-left: 80px;
+}
+
 .filter {
   text-transform: uppercase;
   font-family: "Pt Sans", sans-serif;
@@ -178,6 +209,8 @@ a {
   border: none;
   margin: 0;
   padding: 0;
+  margin-top: 18px;
+  margin-bottom: 20px;
 }
 
 .range-filter {
@@ -260,10 +293,17 @@ a {
   font-weight: bold;
   font-size: 17px;
   line-height: 30px;
+  margin-bottom: 20px;
+}
+
+.filter-paragraph {
+  padding: 10px;
+  padding-left: 18px;
 }
 
 .check {
   padding-left: 2.4em;
+  margin: 0;
   margin-bottom: 1.5em;
   display: block;
 }
@@ -340,6 +380,9 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+  min-height: 318px;
+  text-align: center;
 }
 
 .product-item,
@@ -360,6 +403,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 220px;
+  min-height: 145px;
 }
 
 .product-item-header {
@@ -407,6 +452,7 @@ a {
   color: var(--black);
   background-color: var(--white);
   width: 100%;
+  margin-top: 15px;
 }
 
 .contacts-button {
@@ -435,6 +481,17 @@ a {
   background-color: var(--basic-red);
 }
 
+.contacts-button,
+.write-to-us-button {
+  margin-top: 20px;
+}
+
+.card-catalog-open-button {
+  position: absolute;
+  left: 24px;
+  bottom: 27px;
+}
+
 .main-footer {
   font-size: 18px;
   line-height: 24px;
@@ -445,6 +502,15 @@ a {
 .bottom-row {
   font-size: 16px;
   line-height: 18px;
+  min-height: 107px;
+  display: flex;
+  align-items: center;
+}
+
+.feedback-div {
+  display: flex;
+  justify-content: space-between;
+  flex-basis: 300px;
 }
 
 .icon {
@@ -573,6 +639,10 @@ a {
 .card {
   color: var(--white);
   position: relative;
+  width: 300px;
+  height: 123px;
+  padding: 21px;
+  box-sizing: border-box;
 }
 
 .material {
@@ -606,6 +676,18 @@ a {
   font-size: 24px;
   line-height: 30px;
   margin: 0;
+  margin-bottom: 14px;
+}
+
+.card__image-container {
+  display: flex;
+  width: 130px;
+  min-height: 123px;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .card-button {
@@ -631,12 +713,15 @@ a {
   background-image: url(../img/Man.jpg);
   width: 620px;
   height: 266px;
+  position: relative;
 }
 
 .card-catalog-shadow {
   background: rgba(0, 0, 0, 0.25);
-  width: 620px;
+  width: 100%;
   height: 104px;
+  padding: 24px;
+  box-sizing: border-box;
 }
 
 .card-catalog-header {
@@ -651,6 +736,7 @@ a {
   font-size: 18px;
   line-height: 24px;
   margin: 0;
+  margin-top: 5px;
 }
 
 .card-catalog-button {
@@ -662,10 +748,15 @@ a {
   background-image: url("../img/icon-left.svg");
   width: 22px;
   height: 40px;
+  position: absolute;
+  left: 24px;
+  top: 120px;
 }
 
 .card-catalog-button-next {
   transform: rotate(180deg);
+  left: auto;
+  right: 18px;
 }
 
 .card-catalog-open-button:active {
@@ -716,6 +807,8 @@ a {
 
 .service-block {
   background-color: var(--basic-background);
+  margin-top: 70px;
+  padding-bottom: 100px;
 }
 
 .service-button {
@@ -752,12 +845,20 @@ a {
   border: none;
   border-bottom: 1px dashed var(--basic-red);
   opacity: 0.3;
+  padding: 0;
+  font-size: 13px;
+  line-height: 18px;
 }
 
 .sort-section-button-sort {
   background-color: transparent;
   outline: none;
   border: none;
+  padding: 0;
+}
+
+.sort-section-button-sort:first-child {
+  margin-right: 21px;
 }
 
 .sort-section-button-active {
@@ -831,19 +932,40 @@ a {
   min-width: 280px;
 }
 
-.site-navigation {
+.site-navigation,
+.catalog-list {
   display: flex;
+  justify-content: space-between;
+}
+
+.main-nav .site-navigation {
+  box-shadow: inset 0 -5px 0 #293449;
+}
+
+.main-footer .site-navigation,
+.main-footer .catalog-list {
+  margin-top: 40px;
 }
 
 .site-navigation__list-item,
-.catalog__list-item {
+.catalog-list__list-item {
   flex-grow: 1;
   text-align: center;
+}
+
+.path-list__list-item {
+  margin-right: 17px;
+}
+
+.catalog-list {
+  padding-left: 28px;
 }
 
 .pre-footer {
   display: flex;
   justify-content: space-between;
+  padding-top: 60px;
+  padding-bottom: 70px;
 }
 
 .description-section {
@@ -856,10 +978,6 @@ a {
 
 .upper-contacts-section {
   margin-left: 48px;
-}
-
-.catalog-list {
-  display: flex;
 }
 
 .footer-upper-row .container {
@@ -878,6 +996,7 @@ a {
 .bottom-row .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .user-name {
@@ -890,6 +1009,8 @@ a {
   grid-template-rows: auto auto auto auto auto;
   grid-template-columns: auto auto;
   gap: 20px;
+  padding-top: 21px;
+  padding-bottom: 60px;
 }
 
 .path-list {
@@ -900,6 +1021,7 @@ a {
 .product-type {
   background-color: var(--basic-background);
   grid-area: 2/1/3/-1;
+  padding: 29px;
 }
 
 .filter {
@@ -909,8 +1031,19 @@ a {
 .sort-section {
   grid-area: 3/2/4/-1;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  padding: 10px;
+  padding-left: 18px;
+}
+
+.sort-section__sort-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.sort-section-paragraph {
+  margin-right: 160px;
 }
 
 .product-items {
@@ -927,6 +1060,8 @@ a {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  margin-top: 59px;
+  margin-bottom: 59px;
 }
 
 .card-catalog {
@@ -940,12 +1075,24 @@ a {
   justify-content: space-between;
 }
 
+.popular-items {
+  padding: 25px;
+  padding-right: 19px;
+}
+
 .post-script {
   background-color: var(--basic-background);
+  padding-top: 64px;
+  padding-bottom: 68px;
+}
+
+.post-script-header {
+  margin-bottom: 25px;
 }
 
 .popular-items {
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .producer-list {
@@ -954,19 +1101,25 @@ a {
   gap: 20px;
 }
 
+.popular-products {
+  margin-bottom: 90px;
+}
+
 .service-block .container {
   display: grid;
-  grid-template-columns: repeat(3, auto);
-  gap: 20px;
+  grid-template-columns: 240px 1fr;
+  background: var(--basic-background) url("../img/Car.png") no-repeat 433px 272px;
 }
 
 .service-block__description-section {
   grid-column: 1/-1;
+  margin-bottom: 70px;
 }
 
 .pages {
   display: flex;
   grid-area: 5/2/6/-1;
+  margin-top: 48px;
 }
 
 .search__input {
